// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`case/object-literal complex case of object literal 1`] = `
{
  "body": [
    {
      "end": {
        "col": 1,
        "index": 235,
        "row": 15,
      },
      "expr": {
        "end": {
          "col": 1,
          "index": 235,
          "row": 15,
        },
        "kind": 10175,
        "left": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "variable",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "operator": 10094,
        "right": {
          "end": {
            "col": 1,
            "index": 235,
            "row": 15,
          },
          "kind": 10151,
          "properties": [
            {
              "computed": false,
              "end": {
                "col": 22,
                "index": 35,
                "row": 2,
              },
              "key": {
                "end": {
                  "col": 18,
                  "index": 31,
                  "row": 2,
                },
                "kind": 10117,
                "name": "numberProperty",
                "start": {
                  "col": 4,
                  "index": 17,
                  "row": 2,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 17,
                "row": 2,
              },
              "value": {
                "end": {
                  "col": 22,
                  "index": 35,
                  "row": 2,
                },
                "kind": 10114,
                "start": {
                  "col": 20,
                  "index": 33,
                  "row": 2,
                },
                "value": "10",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 34,
                "index": 71,
                "row": 3,
              },
              "key": {
                "end": {
                  "col": 22,
                  "index": 59,
                  "row": 3,
                },
                "kind": 10117,
                "name": "expressionProperty",
                "start": {
                  "col": 4,
                  "index": 41,
                  "row": 3,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 41,
                "row": 3,
              },
              "value": {
                "end": {
                  "col": 34,
                  "index": 71,
                  "row": 3,
                },
                "kind": 10173,
                "left": {
                  "end": {
                    "col": 26,
                    "index": 63,
                    "row": 3,
                  },
                  "kind": 10114,
                  "start": {
                    "col": 24,
                    "index": 61,
                    "row": 3,
                  },
                  "value": "10",
                },
                "operator": 10046,
                "right": {
                  "end": {
                    "col": 34,
                    "index": 71,
                    "row": 3,
                  },
                  "kind": 10173,
                  "left": {
                    "end": {
                      "col": 30,
                      "index": 67,
                      "row": 3,
                    },
                    "kind": 10117,
                    "name": "z",
                    "start": {
                      "col": 29,
                      "index": 66,
                      "row": 3,
                    },
                  },
                  "operator": 10049,
                  "right": {
                    "end": {
                      "col": 34,
                      "index": 71,
                      "row": 3,
                    },
                    "kind": 10114,
                    "start": {
                      "col": 33,
                      "index": 70,
                      "row": 3,
                    },
                    "value": "7",
                  },
                  "start": {
                    "col": 29,
                    "index": 66,
                    "row": 3,
                  },
                },
                "start": {
                  "col": 24,
                  "index": 61,
                  "row": 3,
                },
              },
            },
            {
              "argument": {
                "end": {
                  "col": 22,
                  "index": 95,
                  "row": 4,
                },
                "kind": 10117,
                "name": "someOtherObject",
                "start": {
                  "col": 7,
                  "index": 80,
                  "row": 4,
                },
              },
              "end": {
                "col": 22,
                "index": 95,
                "row": 4,
              },
              "kind": 10149,
              "start": {
                "col": 4,
                "index": 77,
                "row": 4,
              },
            },
            {
              "computed": true,
              "end": {
                "col": 13,
                "index": 110,
                "row": 5,
              },
              "key": {
                "end": {
                  "col": 8,
                  "index": 105,
                  "row": 5,
                },
                "kind": 10173,
                "left": {
                  "end": {
                    "col": 6,
                    "index": 103,
                    "row": 5,
                  },
                  "kind": 10114,
                  "start": {
                    "col": 5,
                    "index": 102,
                    "row": 5,
                  },
                  "value": "9",
                },
                "operator": 10046,
                "right": {
                  "end": {
                    "col": 8,
                    "index": 105,
                    "row": 5,
                  },
                  "kind": 10114,
                  "start": {
                    "col": 7,
                    "index": 104,
                    "row": 5,
                  },
                  "value": "8",
                },
                "start": {
                  "col": 5,
                  "index": 102,
                  "row": 5,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 5,
                "index": 102,
                "row": 5,
              },
              "value": {
                "end": {
                  "col": 13,
                  "index": 110,
                  "row": 5,
                },
                "kind": 10114,
                "start": {
                  "col": 11,
                  "index": 108,
                  "row": 5,
                },
                "value": "10",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 15,
                "index": 127,
                "row": 6,
              },
              "key": {
                "end": {
                  "col": 5,
                  "index": 117,
                  "row": 6,
                },
                "kind": 10114,
                "start": {
                  "col": 4,
                  "index": 116,
                  "row": 6,
                },
                "value": "1",
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 116,
                "row": 6,
              },
              "value": {
                "end": {
                  "col": 15,
                  "index": 127,
                  "row": 6,
                },
                "kind": 10113,
                "start": {
                  "col": 7,
                  "index": 119,
                  "row": 6,
                },
                "value": "string",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 18,
                "index": 147,
                "row": 7,
              },
              "key": {
                "end": {
                  "col": 9,
                  "index": 138,
                  "row": 7,
                },
                "kind": 10113,
                "start": {
                  "col": 4,
                  "index": 133,
                  "row": 7,
                },
                "value": "key",
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 133,
                "row": 7,
              },
              "value": {
                "end": {
                  "col": 18,
                  "index": 147,
                  "row": 7,
                },
                "kind": 10113,
                "start": {
                  "col": 11,
                  "index": 140,
                  "row": 7,
                },
                "value": "value",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 16,
                "index": 165,
                "row": 8,
              },
              "key": {
                "end": {
                  "col": 16,
                  "index": 165,
                  "row": 8,
                },
                "kind": 10117,
                "name": "otherShorted",
                "start": {
                  "col": 4,
                  "index": 153,
                  "row": 8,
                },
              },
              "kind": 10152,
              "shorted": true,
              "start": {
                "col": 4,
                "index": 153,
                "row": 8,
              },
              "value": undefined,
            },
            {
              "computed": false,
              "end": {
                "col": 5,
                "index": 205,
                "row": 11,
              },
              "key": {
                "end": {
                  "col": 17,
                  "index": 184,
                  "row": 9,
                },
                "kind": 10117,
                "name": "arrowProperty",
                "start": {
                  "col": 4,
                  "index": 171,
                  "row": 9,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 171,
                "row": 9,
              },
              "value": {
                "arguments": [
                  {
                    "end": {
                      "col": 21,
                      "index": 188,
                      "row": 9,
                    },
                    "kind": 10117,
                    "name": "a",
                    "start": {
                      "col": 20,
                      "index": 187,
                      "row": 9,
                    },
                  },
                  {
                    "end": {
                      "col": 23,
                      "index": 190,
                      "row": 9,
                    },
                    "kind": 10117,
                    "name": "b",
                    "start": {
                      "col": 22,
                      "index": 189,
                      "row": 9,
                    },
                  },
                  {
                    "end": {
                      "col": 25,
                      "index": 192,
                      "row": 9,
                    },
                    "kind": 10117,
                    "name": "c",
                    "start": {
                      "col": 24,
                      "index": 191,
                      "row": 9,
                    },
                  },
                ],
                "async": false,
                "body": {
                  "body": [],
                  "end": {
                    "col": 5,
                    "index": 205,
                    "row": 11,
                  },
                  "kind": 10143,
                  "start": {
                    "col": 30,
                    "index": 197,
                    "row": 9,
                  },
                },
                "end": {
                  "col": 5,
                  "index": 205,
                  "row": 11,
                },
                "expressionBody": false,
                "kind": 10163,
                "start": {
                  "col": 20,
                  "index": 187,
                  "row": 9,
                },
              },
            },
            {
              "async": false,
              "body": {
                "body": [],
                "end": {
                  "col": 5,
                  "index": 233,
                  "row": 14,
                },
                "kind": 10143,
                "start": {
                  "col": 18,
                  "index": 225,
                  "row": 12,
                },
              },
              "computed": false,
              "end": {
                "col": 5,
                "index": 233,
                "row": 14,
              },
              "generator": false,
              "key": {
                "end": {
                  "col": 10,
                  "index": 217,
                  "row": 12,
                },
                "kind": 10117,
                "name": "method",
                "start": {
                  "col": 4,
                  "index": 211,
                  "row": 12,
                },
              },
              "kind": 10154,
              "params": [
                {
                  "end": {
                    "col": 13,
                    "index": 220,
                    "row": 12,
                  },
                  "kind": 10117,
                  "name": "a",
                  "start": {
                    "col": 12,
                    "index": 219,
                    "row": 12,
                  },
                },
                {
                  "end": {
                    "col": 16,
                    "index": 223,
                    "row": 12,
                  },
                  "kind": 10117,
                  "name": "v",
                  "start": {
                    "col": 15,
                    "index": 222,
                    "row": 12,
                  },
                },
              ],
              "start": {
                "col": 4,
                "index": 211,
                "row": 12,
              },
            },
          ],
          "start": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
        },
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`case/object-literal computed property of object literal 1`] = `
{
  "body": [
    {
      "end": {
        "col": 1,
        "index": 53,
        "row": 4,
      },
      "expr": {
        "end": {
          "col": 1,
          "index": 53,
          "row": 4,
        },
        "kind": 10175,
        "left": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "variable",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "operator": 10094,
        "right": {
          "end": {
            "col": 1,
            "index": 53,
            "row": 4,
          },
          "kind": 10151,
          "properties": [
            {
              "computed": false,
              "end": {
                "col": 22,
                "index": 35,
                "row": 2,
              },
              "key": {
                "end": {
                  "col": 18,
                  "index": 31,
                  "row": 2,
                },
                "kind": 10117,
                "name": "numberProperty",
                "start": {
                  "col": 4,
                  "index": 17,
                  "row": 2,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 17,
                "row": 2,
              },
              "value": {
                "end": {
                  "col": 22,
                  "index": 35,
                  "row": 2,
                },
                "kind": 10114,
                "start": {
                  "col": 20,
                  "index": 33,
                  "row": 2,
                },
                "value": "10",
              },
            },
            {
              "computed": true,
              "end": {
                "col": 13,
                "index": 50,
                "row": 3,
              },
              "key": {
                "end": {
                  "col": 8,
                  "index": 45,
                  "row": 3,
                },
                "kind": 10173,
                "left": {
                  "end": {
                    "col": 6,
                    "index": 43,
                    "row": 3,
                  },
                  "kind": 10114,
                  "start": {
                    "col": 5,
                    "index": 42,
                    "row": 3,
                  },
                  "value": "9",
                },
                "operator": 10046,
                "right": {
                  "end": {
                    "col": 8,
                    "index": 45,
                    "row": 3,
                  },
                  "kind": 10114,
                  "start": {
                    "col": 7,
                    "index": 44,
                    "row": 3,
                  },
                  "value": "8",
                },
                "start": {
                  "col": 5,
                  "index": 42,
                  "row": 3,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 5,
                "index": 42,
                "row": 3,
              },
              "value": {
                "end": {
                  "col": 13,
                  "index": 50,
                  "row": 3,
                },
                "kind": 10114,
                "start": {
                  "col": 11,
                  "index": 48,
                  "row": 3,
                },
                "value": "10",
              },
            },
          ],
          "start": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
        },
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`case/object-literal expression value of object literal 1`] = `
{
  "body": [
    {
      "end": {
        "col": 1,
        "index": 74,
        "row": 4,
      },
      "expr": {
        "end": {
          "col": 1,
          "index": 74,
          "row": 4,
        },
        "kind": 10175,
        "left": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "variable",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "operator": 10094,
        "right": {
          "end": {
            "col": 1,
            "index": 74,
            "row": 4,
          },
          "kind": 10151,
          "properties": [
            {
              "computed": false,
              "end": {
                "col": 22,
                "index": 35,
                "row": 2,
              },
              "key": {
                "end": {
                  "col": 18,
                  "index": 31,
                  "row": 2,
                },
                "kind": 10117,
                "name": "numberProperty",
                "start": {
                  "col": 4,
                  "index": 17,
                  "row": 2,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 17,
                "row": 2,
              },
              "value": {
                "end": {
                  "col": 22,
                  "index": 35,
                  "row": 2,
                },
                "kind": 10114,
                "start": {
                  "col": 20,
                  "index": 33,
                  "row": 2,
                },
                "value": "10",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 34,
                "index": 71,
                "row": 3,
              },
              "key": {
                "end": {
                  "col": 22,
                  "index": 59,
                  "row": 3,
                },
                "kind": 10117,
                "name": "expressionProperty",
                "start": {
                  "col": 4,
                  "index": 41,
                  "row": 3,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 41,
                "row": 3,
              },
              "value": {
                "end": {
                  "col": 34,
                  "index": 71,
                  "row": 3,
                },
                "kind": 10173,
                "left": {
                  "end": {
                    "col": 26,
                    "index": 63,
                    "row": 3,
                  },
                  "kind": 10114,
                  "start": {
                    "col": 24,
                    "index": 61,
                    "row": 3,
                  },
                  "value": "10",
                },
                "operator": 10046,
                "right": {
                  "end": {
                    "col": 34,
                    "index": 71,
                    "row": 3,
                  },
                  "kind": 10173,
                  "left": {
                    "end": {
                      "col": 30,
                      "index": 67,
                      "row": 3,
                    },
                    "kind": 10117,
                    "name": "z",
                    "start": {
                      "col": 29,
                      "index": 66,
                      "row": 3,
                    },
                  },
                  "operator": 10049,
                  "right": {
                    "end": {
                      "col": 34,
                      "index": 71,
                      "row": 3,
                    },
                    "kind": 10114,
                    "start": {
                      "col": 33,
                      "index": 70,
                      "row": 3,
                    },
                    "value": "7",
                  },
                  "start": {
                    "col": 29,
                    "index": 66,
                    "row": 3,
                  },
                },
                "start": {
                  "col": 24,
                  "index": 61,
                  "row": 3,
                },
              },
            },
          ],
          "start": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
        },
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`case/object-literal number literal property of object literal 1`] = `
{
  "body": [
    {
      "end": {
        "col": 1,
        "index": 68,
        "row": 5,
      },
      "expr": {
        "end": {
          "col": 1,
          "index": 68,
          "row": 5,
        },
        "kind": 10175,
        "left": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "variable",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "operator": 10094,
        "right": {
          "end": {
            "col": 1,
            "index": 68,
            "row": 5,
          },
          "kind": 10151,
          "properties": [
            {
              "computed": false,
              "end": {
                "col": 22,
                "index": 35,
                "row": 2,
              },
              "key": {
                "end": {
                  "col": 18,
                  "index": 31,
                  "row": 2,
                },
                "kind": 10117,
                "name": "numberProperty",
                "start": {
                  "col": 4,
                  "index": 17,
                  "row": 2,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 17,
                "row": 2,
              },
              "value": {
                "end": {
                  "col": 22,
                  "index": 35,
                  "row": 2,
                },
                "kind": 10114,
                "start": {
                  "col": 20,
                  "index": 33,
                  "row": 2,
                },
                "value": "10",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 15,
                "index": 52,
                "row": 3,
              },
              "key": {
                "end": {
                  "col": 5,
                  "index": 42,
                  "row": 3,
                },
                "kind": 10114,
                "start": {
                  "col": 4,
                  "index": 41,
                  "row": 3,
                },
                "value": "1",
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 41,
                "row": 3,
              },
              "value": {
                "end": {
                  "col": 15,
                  "index": 52,
                  "row": 3,
                },
                "kind": 10113,
                "start": {
                  "col": 7,
                  "index": 44,
                  "row": 3,
                },
                "value": "string",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 11,
                "index": 65,
                "row": 4,
              },
              "key": {
                "end": {
                  "col": 7,
                  "index": 61,
                  "row": 4,
                },
                "kind": 10114,
                "start": {
                  "col": 4,
                  "index": 58,
                  "row": 4,
                },
                "value": "100",
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 58,
                "row": 4,
              },
              "value": {
                "end": {
                  "col": 11,
                  "index": 65,
                  "row": 4,
                },
                "kind": 10114,
                "start": {
                  "col": 9,
                  "index": 63,
                  "row": 4,
                },
                "value": "30",
              },
            },
          ],
          "start": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
        },
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`case/object-literal setter and getter of object literal 1`] = `
{
  "body": [
    {
      "end": {
        "col": 1,
        "index": 63,
        "row": 8,
      },
      "expr": {
        "end": {
          "col": 1,
          "index": 63,
          "row": 8,
        },
        "kind": 10175,
        "left": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "variable",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "operator": 10094,
        "right": {
          "end": {
            "col": 1,
            "index": 63,
            "row": 8,
          },
          "kind": 10151,
          "properties": [
            {
              "body": {
                "body": [],
                "end": {
                  "col": 5,
                  "index": 33,
                  "row": 4,
                },
                "kind": 10143,
                "start": {
                  "col": 12,
                  "index": 25,
                  "row": 2,
                },
              },
              "computed": false,
              "end": {
                "col": 5,
                "index": 33,
                "row": 4,
              },
              "key": {
                "end": {
                  "col": 9,
                  "index": 22,
                  "row": 2,
                },
                "kind": 10117,
                "name": "n",
                "start": {
                  "col": 8,
                  "index": 21,
                  "row": 2,
                },
              },
              "kind": 10153,
              "params": [],
              "start": {
                "col": 4,
                "index": 17,
                "row": 2,
              },
              "type": "get",
            },
            {
              "body": {
                "body": [],
                "end": {
                  "col": 5,
                  "index": 61,
                  "row": 7,
                },
                "kind": 10143,
                "start": {
                  "col": 18,
                  "index": 53,
                  "row": 5,
                },
              },
              "computed": false,
              "end": {
                "col": 5,
                "index": 61,
                "row": 7,
              },
              "key": {
                "end": {
                  "col": 9,
                  "index": 44,
                  "row": 5,
                },
                "kind": 10117,
                "name": "n",
                "start": {
                  "col": 8,
                  "index": 43,
                  "row": 5,
                },
              },
              "kind": 10153,
              "params": [
                {
                  "end": {
                    "col": 16,
                    "index": 51,
                    "row": 5,
                  },
                  "kind": 10117,
                  "name": "value",
                  "start": {
                    "col": 11,
                    "index": 46,
                    "row": 5,
                  },
                },
              ],
              "start": {
                "col": 4,
                "index": 39,
                "row": 5,
              },
              "type": "set",
            },
          ],
          "start": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
        },
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`case/object-literal spread of object literal 1`] = `
{
  "body": [
    {
      "end": {
        "col": 1,
        "index": 62,
        "row": 4,
      },
      "expr": {
        "end": {
          "col": 1,
          "index": 62,
          "row": 4,
        },
        "kind": 10175,
        "left": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "variable",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "operator": 10094,
        "right": {
          "end": {
            "col": 1,
            "index": 62,
            "row": 4,
          },
          "kind": 10151,
          "properties": [
            {
              "computed": false,
              "end": {
                "col": 22,
                "index": 35,
                "row": 2,
              },
              "key": {
                "end": {
                  "col": 18,
                  "index": 31,
                  "row": 2,
                },
                "kind": 10117,
                "name": "numberProperty",
                "start": {
                  "col": 4,
                  "index": 17,
                  "row": 2,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 17,
                "row": 2,
              },
              "value": {
                "end": {
                  "col": 22,
                  "index": 35,
                  "row": 2,
                },
                "kind": 10114,
                "start": {
                  "col": 20,
                  "index": 33,
                  "row": 2,
                },
                "value": "10",
              },
            },
            {
              "argument": {
                "end": {
                  "col": 22,
                  "index": 59,
                  "row": 3,
                },
                "kind": 10117,
                "name": "someOtherObject",
                "start": {
                  "col": 7,
                  "index": 44,
                  "row": 3,
                },
              },
              "end": {
                "col": 22,
                "index": 59,
                "row": 3,
              },
              "kind": 10149,
              "start": {
                "col": 4,
                "index": 41,
                "row": 3,
              },
            },
          ],
          "start": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
        },
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`case/object-literal string literal property of object literal 1`] = `
{
  "body": [
    {
      "end": {
        "col": 1,
        "index": 95,
        "row": 6,
      },
      "expr": {
        "end": {
          "col": 1,
          "index": 95,
          "row": 6,
        },
        "kind": 10175,
        "left": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "variable",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "operator": 10094,
        "right": {
          "end": {
            "col": 1,
            "index": 95,
            "row": 6,
          },
          "kind": 10151,
          "properties": [
            {
              "computed": false,
              "end": {
                "col": 22,
                "index": 35,
                "row": 2,
              },
              "key": {
                "end": {
                  "col": 18,
                  "index": 31,
                  "row": 2,
                },
                "kind": 10117,
                "name": "numberProperty",
                "start": {
                  "col": 4,
                  "index": 17,
                  "row": 2,
                },
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 17,
                "row": 2,
              },
              "value": {
                "end": {
                  "col": 22,
                  "index": 35,
                  "row": 2,
                },
                "kind": 10114,
                "start": {
                  "col": 20,
                  "index": 33,
                  "row": 2,
                },
                "value": "10",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 16,
                "index": 53,
                "row": 3,
              },
              "key": {
                "end": {
                  "col": 9,
                  "index": 46,
                  "row": 3,
                },
                "kind": 10113,
                "start": {
                  "col": 4,
                  "index": 41,
                  "row": 3,
                },
                "value": "key",
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 41,
                "row": 3,
              },
              "value": {
                "end": {
                  "col": 16,
                  "index": 53,
                  "row": 3,
                },
                "kind": 10117,
                "name": "value",
                "start": {
                  "col": 11,
                  "index": 48,
                  "row": 3,
                },
              },
            },
            {
              "computed": false,
              "end": {
                "col": 14,
                "index": 69,
                "row": 4,
              },
              "key": {
                "end": {
                  "col": 9,
                  "index": 64,
                  "row": 4,
                },
                "kind": 10113,
                "start": {
                  "col": 4,
                  "index": 59,
                  "row": 4,
                },
                "value": "num",
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 59,
                "row": 4,
              },
              "value": {
                "end": {
                  "col": 14,
                  "index": 69,
                  "row": 4,
                },
                "kind": 10114,
                "start": {
                  "col": 12,
                  "index": 67,
                  "row": 4,
                },
                "value": "10",
              },
            },
            {
              "computed": false,
              "end": {
                "col": 21,
                "index": 92,
                "row": 5,
              },
              "key": {
                "end": {
                  "col": 11,
                  "index": 82,
                  "row": 5,
                },
                "kind": 10113,
                "start": {
                  "col": 4,
                  "index": 75,
                  "row": 5,
                },
                "value": "value",
              },
              "kind": 10152,
              "shorted": false,
              "start": {
                "col": 4,
                "index": 75,
                "row": 5,
              },
              "value": {
                "end": {
                  "col": 21,
                  "index": 92,
                  "row": 5,
                },
                "kind": 10113,
                "start": {
                  "col": 13,
                  "index": 84,
                  "row": 5,
                },
                "value": "string",
              },
            },
          ],
          "start": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
        },
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;
